# lore-game

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.json  generate-config.py  install-bin.py  meson.build  vcpkg.json  xmake.lua
.github/workflows/: Build.yml
android/: build.gradle  gradle.properties.in  local.properties.in
android/app/: build.gradle.in
android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.in
android/app/src/main/java/com/furred/loader/: NativeActivity.java  NativeActivity.java.in
android/app/src/main/res/values/: colors.xml.in  strings.xml.in  styles.xml
cmake/: par_exec_support_test.cpp
include/engine/: Button.h  ColorNode.h  Default.h  Director.h  Engine.h  FontManager.h  Geometry.h  Node.h  Object.h  PresenceManager.h  RectangleNode.h  Scene.h  Scheduler.h  Sprite.h  TextNode.h  Touchable.h  Typeable.h  config.hpp.in  utils.h  utils.hpp
include/furredengine/: ColorNode.h  Director.h  Engine.h  FontManager.h  Geometry.h  Node.h  Object.h  PresenceManager.h  RectangleNode.h  Scene.h  Scheduler.h  Sprite.h  TextNode.h  Touchable.h  Typeable.h  utils.h
python/: glad_requirements.txt  icon_generator.py  requirements.txt
resources/shaders/: rect.frag  rect.vert  sprite.frag  sprite.vert  text.frag  text.vert
setup/: setup-vcpkg.bat  setup-vcpkg.sh
src/: Data.hpp  Director.hpp  Geometry.hpp  Node.hpp  Object.hpp  Ref.hpp  Scene.hpp  Scheduler.hpp  Sprite.hpp  Touchable.hpp  main.cpp
src/crash/: analyzer.cpp  analyzer.hpp  exception-codes.cpp  exception-codes.hpp  memory.hpp
src/engine/: Button.cpp  ColorNode.cpp  Data.hpp  Default.hpp  Director.cpp  Director.hpp  Engine.cpp  Engine.hpp  FontManager.cpp  Geometry.cpp  Geometry.hpp  Node.cpp  Node.hpp  Object.cpp  Object.hpp  PresenceManager.cpp  PresenceManager.hpp  RectangleNode.cpp  Ref.hpp  Scene.cpp  Scene.hpp  Scheduler.cpp  Scheduler.hpp  Sprite.cpp  Sprite.hpp  TextNode.cpp  Touchable.cpp  Touchable.hpp  Typeable.cpp  config.hpp  meson.build  presence.hpp  utils.cpp  utils.hpp
subprojects/: glaze.wrap
subprojects/packagefiles/glaze/: meson.build
subprojects/packagefiles/sdl3_image/: meson.build
subprojects/packagefiles/sdl3_image/src/: meson.build
